--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 .btn {
     background-color: #469165;
     font-size: 16px;
+    font-weight: 600;
     color: #ffff;
     border-radius: 4px;
     padding: 16px 12px;
@@ -26,6 +27,9 @@
     color: #469165;
 }
 
+
+
+/* navbar  */
 .navbar {
     display: flex;
     max-width: 1360px;
@@ -49,6 +53,87 @@
     color: #000000;
 }
 
-.hero-section{
+
+
+/* Hero section  */
+.hero-section {
     background-image: url('./assets/hero-bg.png');
+    width: 100%;
+    height: 583px;
+    background-repeat: no-repeat;
+    background-position: center;
 }
+
+.hero-btn {
+    color: #469165;
+    background-color: white;
+    padding: 8px 12px;
+    border-radius: 20px;
+    border: none;
+}
+
+.btn-grp {
+    text-align: center;
+    padding-top: 70px;
+}
+
+.hero-btn {}
+
+.hero-content h1 {
+    text-align: center;
+    color: white;
+    margin-top: 16px;
+    font-size: 72px;
+}
+
+.hero-content h1 span {
+    color: #30B868;
+}
+
+.hero-content p {
+    margin-top: 16px;
+    text-align: center;
+    line-height: 24px;
+    color: #ffff;
+}
+
+.btn-grp2 {
+    text-align: center;
+    margin-top: 32px;
+    padding-bottom: 134px;
+}
+
+.hero-btn1 {
+    background-color: #469165;
+    padding: 18px;
+    color: white;
+    font-weight: 600;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+}
+
+.hero-btn1:hover {
+    background-color: transparent;
+    border: 2px solid #30B868;
+    color: #30B868;
+}
+
+.hero-btn2 {
+    background: transparent;
+    border: 2px solid white;
+    padding: 16px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 16px;
+    color: white;
+    font-weight: 600;
+}
+
+.hero-btn2:hover {
+    background-color: #469165;
+    border: none;
+}
+
+
+/* card section */
