--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@
     padding-top: 70px;
 }
 
-.hero-btn {}
+
 
 .hero-content h1 {
     text-align: center;
@@ -190,4 +190,46 @@
     color: #627382;
     font-size: 16px;
     line-height: 20px;
+}
+
+
+/* solution section */
+.solution-content {
+    display: flex;
+    gap: 60px;
+    margin: 120px 0;
+}
+
+.solution-title {
+    display: flex;
+    align-items: center;
+}
+
+.solution-title .solution-details #solution-heading {
+    color: #469165;
+    line-height: 20px;
+    margin-bottom: 16px;
+}
+
+.solution-title .solution-details h1 {
+    font-size: 60px;
+    color: #001931;
+    margin-bottom: 16px;
+}
+
+.solution-title .solution-details #solution-text {
+    color: #627382;
+    line-height: 20px;
+    margin-bottom: 16px;
+}
+
+.solution-list {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: bold;
+    color: #001931;
+    margin-bottom: 16px;
+    display: flex;
+    align-items: center;
+    gap: 7px;
 }
