--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 
 .btn:hover {
     background-color: #ffff;
-    border: 2px solid #469165;
+    outline: 2px solid #469165;
     color: #469165;
 }
 
@@ -54,6 +54,10 @@
     color: #000000;
 }
 
+.nav-menu ul li a:hover {
+    color: black;
+    font-weight: 600;
+}
 
 
 /* Hero section  */
@@ -66,6 +70,9 @@
 }
 
 .hero-btn {
+    display: flex;
+    align-items: center;
+    gap: 6px;
     color: #469165;
     background-color: white;
     padding: 8px 12px;
@@ -74,6 +81,9 @@
 }
 
 .btn-grp {
+    display: flex;
+
+    justify-content: center;
     text-align: center;
     padding-top: 70px;
 }
@@ -116,7 +126,7 @@
 
 .hero-btn1:hover {
     background-color: transparent;
-    border: 2px solid #30B868;
+    outline: 2px solid #30B868;
     color: #30B868;
 }
 
@@ -134,6 +144,7 @@
 .hero-btn2:hover {
     background-color: #469165;
     border: none;
+    border: 2px solid #469165;
 }
 
 
@@ -235,12 +246,13 @@
 }
 
 
-/* .Bottom section */
 
+/* .Bottom section */
 .bottom-section {
     background-color: #F7F6F2;
     text-align: center;
     padding: 80px 40px;
+    margin-bottom: 120px;
 }
 
 .bottom-section h1 {
@@ -254,4 +266,64 @@
     font-size: 16px;
     margin-top: 16px;
     margin-bottom: 16px;
+}
+
+.bottom-section button {
+    box-shadow: 15px 20px 50px #e1dcdc;
+}
+
+/* Footer Section  */
+.footer {
+    background-color: #001931;
+    height: 384px;
+    width: 100%;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    padding: 120px 120px 80px;
+}
+
+.footer-details {
+    padding-right: 107px;
+}
+
+.footer-details p {
+    color: #ffff;
+    font-size: 20px;
+    line-height: 28px;
+    margin-bottom: 16px;
+}
+
+.footer-icon {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-img {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffff;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.footer-img:hover {
+    background-color: #30B868;
+}
+
+hr {
+    opacity: 20%;
+    margin-bottom: 16px;
+}
+
+.copy-right-text p {
+    text-align: center;
+    color: #FAFAFA;
+    font-size: 16px;
+    line-height: 24px;
 }
